--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ParallelSort)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(ParallelSort main.cpp TaskQueue/TaskQueue.cpp TaskQueue/TaskQueue.h QueueHandler/QueueHandler.cpp QueueHandler/QueueHandler.h FileReader/Reader.cpp FileReader/Reader.h)
+add_executable(ParallelSort main.cpp TaskQueue/TaskQueue.h QueueHandler/QueueHandler.h FileReader/Reader.h)
